@@ -15,7 +15,7 @@ class DeadendPagesPage extends PageQueryPage {
 	}
 
 	function getPageHeader() {
-		return '<p>' . wfMsg('deadendpagestext') . '</p>';
+		return wfMsgExt( 'deadendpagestext', array( 'parse' ) );
 	}
 
 	/**
