@@ -364,7 +364,7 @@ $specialPageAliases = array(
 	'Listusers'                 => array( 'Listusers', 'Userlist' ),
 	'Statistics'                => array( 'Statistics' ),
 	'Randompage'                => array( 'Random', 'Randompage' ),
-	'Lonelypages'               => array( 'Lonelypages' ),
+	'Lonelypages'               => array( 'Lonelypages', 'Orphanedpages' ),
 	'Uncategorizedpages'        => array( 'Uncategorizedpages' ),
 	'Uncategorizedcategories'   => array( 'Uncategorizedcategories' ),
 	'Uncategorizedimages'       => array( 'Uncategorizedimages' ),
